tests/parsing/smtlib/v2.6/errors/028_pattern_bad_argument_2.expected
File "tests/parsing/smtlib/v2.6/errors/028_pattern_bad_argument_2.smt2", line 3, character 46-47:
3 | (define-fun f ((x t)) t (match x ((A B) ((C x !) x))))
                                                  ^
Error while parsing arguments of a constructor in a pattern,
      read the reserved word '!',
      but expected a closing parenthesis, or a symbol to bind the argument;
      note that keywords and reserved words (such as '_', 'as', ...) are not
      symbols, and thus are not allowed here.
